# adhoc_derive

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE  README.md
src/: adhoc.rs  lib.rs  regex.rs  transform_idents.rs
tests/: construct_with.rs  enums.rs  integration_test.rs  structs.rs
