[package]
name = "adhoc_derive"
version = "0.1.0"
authors = ["Dominik Fankhauser <dominik@fankhausers.ch>"]
description = "Derive FromStr impl based on regex provided via attribute"
repository = "https://github.com/df5602/adhoc_derive"
keywords = ["FromStr", "parse", "regex"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.23", features = ["extra-traits", "full"] }
quote = "0.6.10"
proc-macro2 = "0.4.24"
lazy_static = "1.2.0"
regex = "1.1.0"