[package]
name = "adhoc_derive"
version = "0.1.2"
authors = ["Dominik Fankhauser <dominik@fankhausers.ch>"]
license = "MIT"
description = "Derive FromStr impl based on regex provided via attribute"
readme = "README.md"
repository = "https://github.com/df5602/adhoc_derive"
keywords = ["FromStr", "parse", "regex"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.23", features = ["extra-traits", "full", "visit-mut"] }
quote = "0.6.10"
proc-macro2 = "0.4.24"
regex = "1.1.0"
regex-syntax = "0.6.4"

[dev-dependencies]
lazy_static = "1.2.0"